syntax = "proto3";

package mcp.servers;

service AgentCommunication {
  rpc BidirectionalStream(stream ClientMessage) returns (stream ServerMessage);
}

message ClientMessage {
  string agent_id = 1;
  bytes payload = 2;
  map<string, string> metadata = 3;
}

message ServerMessage {
  int32 status_code = 1;
  string message = 2;
  bytes response_data = 3;
  int64 timestamp = 4;
}